Added about me section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>Hello World</h1>
+<html>
+    <title>Atil's Website</title>
+    <img src="/Users/atil/AtilGWeb/pictures/72708906.jpeg" alt="Atil's picture">
+
+    <h1>About Me!</h1>
+        <p> Hello! My name Is Atil Goker! I am a computer science major here at Georgia State! I love playing video games, going hiking and I love my pets!</p>
+
 
 </html>
