Fixed issue with image loading I think

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
     <title>Atil's Website</title>
-    <img src="/Users/atil/AtilGWeb/pictures/72708906.jpeg" alt="Atil's picture">
+    <img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg" alt="Atil's picture">
 
     <h1>About Me!</h1>
         <p> Hello! My name Is Atil Goker! I am a computer science major here at Georgia State! I love playing video games, going hiking and I love my pets!</p>
