Changed background color

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 
 <html>
+    <head>
+    <link rel="stylesheet" href="mystyle.css">
+    </head>
     <title>Atil's Website</title>
-    <img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" alt="Atil's picture">
+    <img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" alt="Atil's picture" class = "center">
 
-    <h1>About Me!</h1>
-        <p> Hello! My name Is Atil Goker! I am a computer science major here at Georgia State! I love playing video games, going hiking and I love my pets!</p>
+    <h1>Welcome!</h1>
+        <p> <b>Hello! My name Is Atil Goker! Welcome to my Website!</b></p>
 
+    
 
 </html>
