--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<html>
+  <head>
     <head>
+        <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+        <meta charset="utf-8">
+        <meta name="description" content="Portfolio of Yaroslava Boyko">
+        <link rel="stylesheet" href="css/styles.css">
+        <!-- Font Awesome -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Material Design Bootstrap -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+    
+        <!-- Fav Icon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+    </head>
     <link rel="stylesheet" href="mystyle.css">
     </head>
-    <title>Atil's Website</title>
-    <img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" alt="Atil's picture" class = "center">
+<title>Atil Goker</title>
 
-    <h1>Welcome!</h1>
-        <p> <b>Hello! My name Is Atil Goker! Welcome to my Website!</b></p>
+<body data-spy="scroll" data-target="#main_nav" data-offset="70">
+    <nav class="navbar navbar-expand-sm navbar-dark elegant-color fixed-top">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+        <div class="collapse navbar-collapse" id="main_nav">
+            <ul class="nav navbar-nav ml-auto">
+                <a class="nav-link" href="#top">Home</a>
+                <a class="nav-link" href="#aboutme">About Me</a>
+                <a class="nav-link" href="#projects">Projects</a>
+                <a class="nav-link" href="#skills">Skills</a>
+                <a class="nav-link" href="#contactme">Contact</a>
+            </ul>
+        </div>
+    </nav>
+    <header class="bg-white text-white main-content" id="top">
+        <div class="container text-center">
+            <h1 class="longer-animated fadeIn">Atil Goker</h1>
+            <p class="longer-animated fadeIn"><a href="mailto:atilgoker@gmail.com">Email</a> |
+                <a href="https://github.com/AtilG" target="_blank" rel="noopener noreferrer">Github</a> |
+                <a href="https://www.linkedin.com/in/atil/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            </p>
+        </div>
+    </header>
 
-    
 
+<img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" alt="Atil's picture" class = "center" height = 50% width = 50%>
+
+<h1>Welcome!</h1>
+
+    <p> <b>Hello! My name Is Atil Goker! Welcome to my Website!</b></p>
+  <body>
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    </body>
 </html>
