--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
         </div>
     </header>
 
+<div = container
+<img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" alt="Atil's picture" class = "center" height = 150 width = 150>
 
-<img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" alt="Atil's picture" class = "center" height = 50% width = 50%>
 
-<h1>Welcome!</h1>
-
-    <p> <b>Hello! My name Is Atil Goker! Welcome to my Website!</b></p>
-  <body>
+   
 
 
 
