--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <head>
         <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
         <meta charset="utf-8">
-        <meta name="description" content="Portfolio of Yaroslava Boyko">
+        <meta name="description" content="Portfolio of Atil Goker">
         <link rel="stylesheet" href="css/styles.css">
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
@@ -15,12 +14,6 @@
         <!-- Material Design Bootstrap -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     
-        <!-- Fav Icon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-    </head>
     <link rel="stylesheet" href="mystyle.css">
     </head>
 <title>Atil Goker</title>
@@ -41,13 +34,12 @@
         </div>
     </nav>
     <header class="bg-white text-white main-content" id="top">
-        <div class="container text-center">
             <h1 class="longer-animated fadeIn">Atil Goker</h1>
             <p class="longer-animated fadeIn"><a href="mailto:atilgoker@gmail.com">Email</a> |
                 <a href="https://github.com/AtilG" target="_blank" rel="noopener noreferrer">Github</a> |
                 <a href="https://www.linkedin.com/in/atil/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
             </p>
-        </div>
+    
     </header>
 
 
@@ -65,5 +57,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    </body>
+</body>
 </html>
