--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
     
     </header>
 
-
-<img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" alt="Atil's picture" class = "center" height = 150 width = 150>
-
-
-   
-
-
+    <div class="card" style="width: 18rem;">
+        <img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" height = "50%"" width="50%" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
 
 
     <!-- Optional JavaScript -->
