--- a/index.html
+++ b/index.html
@@ -34,18 +34,25 @@
         </div>
     </nav>
     <header class="bg-white text-white main-content" id="top">
+        <div class="container text-center">
             <h1 class="longer-animated fadeIn">Atil Goker</h1>
             <p class="longer-animated fadeIn"><a href="mailto:atilgoker@gmail.com">Email</a> |
                 <a href="https://github.com/AtilG" target="_blank" rel="noopener noreferrer">Github</a> |
                 <a href="https://www.linkedin.com/in/atil/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
             </p>
-    
+        </div>
     </header>
-
-    <div class="card" style="width: 18rem;">
-        <img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" height = "50%"" width="50%" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" height = "50%" width="50%"  class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">About Me</h5>
+              <p class="card-text">Hello my name is Atil Goker and I am currently a computer science student at Georgia State University. I am expecting to graduate in May 2022 and I am passionate about databases and mobile development!</p>
+            </div>
+          </div>
         </div>
       </div>
 
