--- a/index.html
+++ b/index.html
@@ -1,67 +1,123 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-        <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-        <meta charset="utf-8">
-        <meta name="description" content="Portfolio of Atil Goker">
-        <link rel="stylesheet" href="css/styles.css">
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-        <!-- Bootstrap core CSS -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-        <!-- Material Design Bootstrap -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
-    
-    <link rel="stylesheet" href="mystyle.css">
-    </head>
-<title>Atil Goker</title>
+    <meta
+      name="viewport"
+      content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes"
+    />
+    <meta charset="utf-8" />
+    <meta name="description" content="Portfolio of Atil Goker" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro"
+      rel="stylesheet"
+    />
+    <!-- Bootstrap core CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Material Design Bootstrap -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css"
+      rel="stylesheet"
+    />
 
-<body data-spy="scroll" data-target="#main_nav" data-offset="70">
+    <link rel="stylesheet" href="mystyle.css" />
+  </head>
+  <title>Atil Goker</title>
+
+  <body data-spy="scroll" data-target="#main_nav" data-offset="70">
     <nav class="navbar navbar-expand-sm navbar-dark elegant-color fixed-top">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-        <div class="collapse navbar-collapse" id="main_nav">
-            <ul class="nav navbar-nav ml-auto">
-                <a class="nav-link" href="#top">Home</a>
-                <a class="nav-link" href="#aboutme">About Me</a>
-                <a class="nav-link" href="#projects">Projects</a>
-                <a class="nav-link" href="#skills">Skills</a>
-                <a class="nav-link" href="#contactme">Contact</a>
-            </ul>
-        </div>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#main_nav"
+        aria-controls="navbarResponsive"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="main_nav">
+        <ul class="nav navbar-nav ml-auto">
+          <a class="nav-link" href="#top">Home</a>
+          <a class="nav-link" href="#aboutme">About Me</a>
+          <a class="nav-link" href="#skills">Skills</a>
+          <a class="nav-link" href="#contactme">Contact</a>
+        </ul>
+      </div>
     </nav>
     <header class="bg-white text-white main-content" id="top">
-        <div class="container text-center">
-            <h1 class="longer-animated fadeIn">Atil Goker</h1>
-            <p class="longer-animated fadeIn"><a href="mailto:atilgoker@gmail.com">Email</a> |
-                <a href="https://github.com/AtilG" target="_blank" rel="noopener noreferrer">Github</a> |
-                <a href="https://www.linkedin.com/in/atil/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-            </p>
-        </div>
+      <div class="container text-center">
+        <h1 class="longer-animated fadeIn">Atil Goker</h1>
+        <p class="longer-animated fadeIn">
+          <a href="mailto:atilgoker@gmail.com">Email</a> |
+          <a
+            href="https://github.com/AtilG"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Github</a
+          >
+          |
+          <a
+            href="https://www.linkedin.com/in/atil/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >LinkedIn</a
+          >
+        </p>
+      </div>
     </header>
-    <div class="card mb-3" style="max-width: 540px;">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true" height = "50%" width="50%"  class="img-fluid rounded-start" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">About Me</h5>
-              <p class="card-text">Hello my name is Atil Goker and I am currently a computer science student at Georgia State University. I am expecting to graduate in May 2022 and I am passionate about databases and mobile development!</p>
-            </div>
+    <div class="card mb-3" style="max-width: 2000px">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img
+            src="https://github.com/AtilG/AtilG.github.io/blob/b0e30c2635719ed02def78422752032ce41a6e2f/pictures/72708906.jpeg?raw=true"
+            height="65%"
+            width="65%"
+            class="img-fluid rounded-start"
+            alt="..."
+          />
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">About Me</h5>
+            <p class="card-text">
+              Hello my name is Atil Goker and I am currently a computer science
+              student at Georgia State University. I am expecting to graduate in
+              May 2022 and I am passionate about databases and mobile
+              development! In my free time I enjoy playing video games, hiking,
+              spending time with my family and playing with my pets!
+            </p>
           </div>
         </div>
       </div>
-
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
