--- a/index.html
+++ b/index.html
@@ -102,6 +102,25 @@
       </div>
     </div>
 
+    <section id="skills">
+        <div class="row container">
+            <div class="col-lg-5">
+                <h2>Relevant Courses</h2>
+                <p>Fundamentals of Computer Science<br /> Database Systems<br /> Mobile Computing and Wireless Networks<br /> Data Structures <br /> Design and Analysis of Algorithms<br /> Computer Organization
+                    and Programming<br /> System Level Programming<br /> 
+                </p>
+            </div>
+            <div class="col-lg-7">
+                <h2>Skills and Tools</h2>
+                <p>
+                    <strong>Languages</strong>: Java, CSS/HTML, C, JavaScript, SQL, Python, Lua<br />
+                    <strong>Databases</strong>: MySQL, MongoDB<br />
+                    <strong>Operating Systems</strong>: WindowsOS, Android, MacOS, iOS<br />
+                    <strong>Spoken Languages</strong>: English (Native), Turkish (Limited Working Proficiency)</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
