resolved issue with different resolution screen sizes not responding correctly to card sizes. fixed hyperlink text to match better with theme of website.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="mystyle.css" />
   </head>
   <title>Atil Goker</title>
-
+ 
   <body data-spy="scroll" data-target="#main_nav" data-offset="70">
     <nav class="navbar navbar-expand-sm navbar-dark elegant-color fixed-top">
       <button
@@ -76,6 +76,7 @@
         </p>
       </div>
     </header>
+    <div class="container-fluid">
     <div class="card mb-3" style="max-width: 2000px">
       <div class="row g-0">
         <div class="col-md-4">
@@ -120,6 +121,7 @@
             </div>
         </div>
     </section>
+  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
